Make Upcoming Meetings view scrollable + fix 'timeLeft' to truncate from RoomStatus. (only the seconds value is passed to BriefEventDetails)

--- a/src/components/BriefEventDetails/BriefEventDetails.module.css
+++ b/src/components/BriefEventDetails/BriefEventDetails.module.css
@@ -1,3 +1,34 @@
+.scrollContainer {
+  max-height: 35rem; /* or whatever fits your layout */
+  overflow-y: auto;
+  padding-right: 15px; /* optional, to prevent scrollbar overlapping content */
+  padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.upcomingLabel {
+  color: black;
+  width: 100%;
+  margin-bottom: 10px;
+  margin-top: 0;
+  text-align: center;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+.upcomingLabelDarkMode {
+  color: white;
+  width: 100%;
+  margin-bottom: 10px;
+  margin-top: 0;
+  text-align: center;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+
 .eventCard {
     border: 2px solid black;
     border-radius: 8px;
